--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -1,19 +1,27 @@
+@font-face {
+    font-family: bukhari;
+    src: url('./fonts/BukhariScript-Regular.ttf')
+}
+
 .main {
     display: flex;
     flex-direction: column;
     text-align: center;
     position: relative;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: bukhari;
+    text-decoration: none;
+    margin: 0;
+    /* font-family: "Trebuchet MS", Helvetica, sans-serif; */
 }
 
 .display {
     top: 10%;
     display: flex;
     position: absolute;
-    background-color: rgb(218, 248, 218, 0.8);
+    background-color: rgb(218, 248, 218, 0.7);
     left: 20%;
-    width: 60%;
-    height: 60%;
+    width: 62%;
+    height: 50%;
     z-index: 0.5;
     border-radius: 5px 100px 5px;
 }
@@ -22,7 +30,13 @@
     z-index: 0;
     height: 100%;
     width: 100%;
+    margin: 0;
 }
+
+.logo-container {
+    padding-left: 10px;
+}
+
 .logo {
     height: 200px;
     width: 200px;
@@ -30,11 +44,13 @@
 }
 ul {
     color: green;
+    list-style-type:none;
 }
 
 li {
     text-align: left;
     padding-top: 10px;
     padding-left: 20%;
-    color: rgb(241, 183, 74);
+    color: rgb(97, 68, 15);
 }
+
