--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -45,3 +45,31 @@ a:hover{
 p {
     color: rgb(97, 68, 15);
 }
+
+.dropdown {
+    position: relative;
+    display: flex;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: lightgreen;
+    min-width: 100px;
+    height: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+    padding: 12px;
+    top: 27px;
+    z-index: 1;
+  }
+  .dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown:hover{
+    border-top: 4px solid lightgreen;
+    border-radius: 50%;
+}
+
+  
