--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -7,12 +7,16 @@
     background: rgba(0, 0, 0, 0.7);
     z-index: 10;
   }
- 
-  .modal-child {
+
+
+  .modal-list {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 .button {
@@ -36,8 +40,15 @@
   flex-direction: column;
   text-align: center;
   align-items: center;
+  position: absolute;
   font-family: bukhari;
   color: rgb(192, 245, 192);
-  padding: 8px;
+  /* padding: 8px; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
+ 
+  .title {
+    margin-bottom: 8px;
+  }
