--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -4,9 +4,9 @@
     justify-content: space-between;
     align-items: center;
     position: relative; */
-    height: 600px;
+    height: 100%;
     width: 100%;
-    
+    margin: 8px;
 }
 
 .dashboard {
@@ -17,9 +17,9 @@
 }
 
 .index{
-height: 500px;
-width: 372px;
-border: 1px solid lightgreen;
+height: 100%;
+width: 33%;
+/* border: 1px solid lightgreen; */
 margin: 0;  
 }
 
@@ -41,13 +41,20 @@ margin: 0;
     height: 10%;
     width: 10%;
 }
-/* .dashboard-links {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-} */
-/* .user-details {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-} */
+
+.lists {
+display: flex;
+justify-content: space-evenly;
+flex-direction: row;
+align-items: center;
+text-align: left;
+/* padding: 16px; */
+}
+
+.lists:hover {
+    cursor: pointer;
+}
+
+.list-title:hover {
+    color: green;
+}
