--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -5,12 +5,15 @@
 }
 
 .footer-container {
+    display: flex;
+    flex-direction:  row;
     margin: 0;
 }
+
 .foot {
-    display: flex;
-    align-items: center;
+    padding: 3%;
 }
+
 .linkedin {
     width: 35px;
     height: 25px;
