--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -23,6 +23,18 @@ width: 33%;
 margin: 0;  
 }
 
+.index-2 {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+width: 33%;
+/* border: 1px solid lightgreen; */
+margin: 0;  
+}
+
+.index-2>li {
+    padding: 0;
+}
 .profile {
     height: 275px;
     width: 380px;
@@ -38,18 +50,19 @@ margin: 0;
 }
 
 .profile-pic {
-    height: 10%;
-    width: 10%;
+    height: 15%;
+    width: 15%;
 }
 
 .lists {
 display: flex;
 justify-content: space-evenly;
-flex-direction: row;
+flex-direction: column;
 align-items: center;
-text-align: left;
+text-align: center;
 /* padding: 16px; */
 }
+
 
 .lists:hover {
     cursor: pointer;
@@ -57,4 +70,14 @@ text-align: left;
 
 .list-title:hover {
     color: green;
+}
+
+.list-index>ul{
+    display: flex;
+    align-items: center;
+    max-width: 215px;
+}
+
+.list-index>p{
+    padding-bottom: 10px;
 }
