--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -14,11 +14,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: rgb(229, 250, 230);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
   }
 
+  .modal-list>h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(34, 34, 170);
+  }
 .button {
     padding: 5px;
     border: none;
@@ -52,3 +56,10 @@
   .title {
     margin-bottom: 8px;
   }
+
+  .list-index>ul>li{
+    border: 1px solid lightgreen;
+    width: 75%;
+  }
+
+  
