--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -23,18 +23,28 @@ width: 33%;
 margin: 0;  
 }
 
-.index-2 {
+.index2 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100%;
-width: 33%;
+    width: 33%;
 /* border: 1px solid lightgreen; */
-margin: 0;  
+    margin: 0;  
+    color: rgb(97, 68, 15);
 }
 
-.index-2>li {
-    padding: 0;
+.index2>ul>li{
+    padding: 8px;
 }
+/* .index2>button{
+    width: 50%;
+} */
+
+/* .index2>header{
+    color: rgb(97, 68, 15);
+} */
+
 .profile {
     height: 275px;
     width: 380px;
@@ -57,10 +67,15 @@ margin: 0;
 .lists {
 display: flex;
 justify-content: space-evenly;
-flex-direction: column;
+flex-direction: row;
 align-items: center;
 text-align: center;
-/* padding: 16px; */
+padding: 8px;
+color: rgb(97, 68, 15);
+}
+
+.list-index>p{
+    font-size: large;
 }
 
 
@@ -71,13 +86,10 @@ text-align: center;
 .list-title:hover {
     color: green;
 }
-
 .list-index>ul{
-    display: flex;
-    align-items: center;
-    max-width: 215px;
+    text-align: -webkit-center;
+    margin: 8px;
 }
-
-.list-index>p{
-    padding-bottom: 10px;
+.list-index>ul>p{
+    margin-bottom: 10px;
 }
