--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -7,7 +7,8 @@
 .footer-container {
     display: flex;
     flex-direction:  row;
-    margin: 0;
+    justify-content: center;
+    color: rgb(97, 68, 15);
 }
 
 .foot {
