--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -3,15 +3,16 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    background-color: rgb(192, 245, 192, 0.8);
+    background-color: rgb(192, 245, 192);
     font-family: bukhari;
 }
 
 .logo1 {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     z-index: 0.5;
+    margin: 4px
 }
 
 .nav-components {
@@ -19,18 +20,23 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.nav-title{
+    font-size: large;
+}
 button {
     padding: 5px;
-    background-color: none;
     border: none;
     font-family: bukhari;
-    background-color: rgb(192, 245, 192, 0.8);
+    background-color: rgb(192, 245, 192);
     color: rgb(34, 34, 170);
 }
 
 button:hover{
     color: purple;
     text-decoration: underline;
+}
+.dropdown-content>a{
+    padding-bottom: 8px
 }
 a {
     padding: 5px;
@@ -56,10 +62,10 @@ p {
     position: absolute;
     background-color: lightgreen;
     min-width: 100px;
-    height: 100px;
+    height: 40px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
     padding: 12px;
-    top: 27px;
+    top: 17px;
     z-index: 1;
   }
   .dropdown:hover .dropdown-content {
