--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -50,6 +50,9 @@ margin: 0;
     width: 380px;
     border: 1px solid lightgreen;
     margin: 0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .feed {
@@ -60,8 +63,9 @@ margin: 0;
 }
 
 .profile-pic {
-    height: 15%;
-    width: 15%;
+    height: 35%;
+    width: 35%;
+    align-self: flex-start;
 }
 
 .lists {
