--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -22,6 +22,8 @@
   .modal-list>h1{
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(34, 34, 170);
+    font-size: larger;
+    font-weight: 600;
   }
 .button {
     padding: 5px;
