--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -99,11 +99,11 @@
             }
         }
 
-        p{
+        .summary{
             color: white;
             padding: 5px;
         }
-        h1{
+        .name{
             margin: 10px 0;
             font-size: 18px;
             font-weight: bold;
