--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,14 +1,16 @@
 .footer {
-    background-color: rgb(192, 245, 192, 0.8);
+    background-color: rgba(48, 112, 5, 0.8);
     font-family: Arial, Helvetica, sans-serif;
-   
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-container {
     display: flex;
     flex-direction:  row;
     justify-content: center;
-    color: rgb(97, 68, 15);
+    color: rgb(248, 246, 242);
 }
 
 .foot {
