--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -1,68 +1,75 @@
 .modal-background {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 10;
-  }
-
-
-  .modal-list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(229, 250, 230);
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-  .modal-list>h1{
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(34, 34, 170);
-  }
-.button {
-    padding: 5px;
-    border: none;
-    font-family: bukhari;
-    background-color: rgb(192, 245, 192, 0.8);
-    color: rgb(34, 34, 170);
-    border-radius:  0 50% 50%;
-    margin: 5px;
-    /* border-radius: 5px 50%; */
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10;
 }
 
-.button:hover{
-    color: purple;
-    text-decoration: underline;
-}
 
-.form-name {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
+.modal-list {
   position: absolute;
-  font-family: bukhari;
-  color: rgb(192, 245, 192);
-  /* padding: 8px; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: rgb(245, 245, 245);
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
- 
-  .title {
-    margin-bottom: 8px;
-  }
 
-  .list-index>ul>li{
-    border: 1px solid lightgreen;
-    width: 75%;
-  }
+.modal-background .modal-list>h1{
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(34, 34, 170);
+  font-size: larger;
+  font-weight: 600;
+}
+.button {
+  padding: 5px;
+  border: none;
+  font-family: bukhari;
+  background-color: rgb(192, 245, 192, 0.8);
+  color: rgb(178, 178, 236);
+  border-radius:  0 50% 50%;
+  margin: 5px;
+  /* border-radius: 5px 50%; */
+}
 
-  .errors{
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+.button:hover{
+  color: purple;
+  text-decoration: underline;
+}
+
+.form-name {
+display: flex;
+flex-direction: column;
+text-align: center;
+align-items: center;
+position: absolute;
+font-family: bukhari;
+color: rgba(48, 112, 5, 0.8);
+/* padding: 8px; */
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+
+.title {
+  margin-bottom: 8px;
+  background: transparent;
+  border: none;
+  padding-top: 10px;
+  font-size: 16px;
+  text-align: center;
+}
+
+.list-index>ul>li{
+  border: 1px solid lightgreen;
+  width: 75%;
+}
+
+.errors{
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+}
