--- a/frontend/src/stylesheets/reset.css
+++ b/frontend/src/stylesheets/reset.css
@@ -43,3 +43,26 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+button{
+	padding: 10px;
+	border-radius: 5px 20px;
+    border: none;
+    font-family: bukhari;
+    background-color: rgba(48, 112, 5, 0.8);
+    color: rgb(255, 255, 255);
+}
+
+button:hover{
+	text-decoration: none;
+	background-color: rgba(19, 46, 2, 0.8);
+}
+
+a{
+	color: white;
+}
+
+a:hover{
+	text-decoration: none;
+	color: rgba(19, 46, 2, 0.8);
+}
