--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,8 +1,6 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
     font-family: Arial, Helvetica, sans-serif;
-    position: absolute;
-    bottom: 0;
     width: 100%;
 }
 
@@ -11,6 +9,11 @@
     flex-direction:  row;
     justify-content: center;
     color: rgb(248, 246, 242);
+    margin-top: 60px;
+}
+
+.footer-container>ul {
+    margin-left: -100px;
 }
 
 .foot {
@@ -34,3 +37,6 @@
     padding-left: 0;
 }
 
+ul {
+   margin-left: -100; 
+}
