--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -17,14 +17,23 @@
   background-color: rgb(245, 245, 245);
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-}
+} 
 
 .modal-background .modal-list>h1{
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(34, 34, 170);
+  color: rgb(97, 68, 15);
   font-size: larger;
   font-weight: 600;
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
+
+.modal-background>button {
+  margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
 .button {
   padding: 5px;
   border: none;
@@ -33,6 +42,11 @@
   color: rgb(178, 178, 236);
   border-radius:  0 50% 50%;
   margin: 5px;
+  outline: none;
+  /* margin-left: 10px;
+  margin-right: 10px; */
+  /* display: flex;
+  justify-content: space-evenly; */
   /* border-radius: 5px 50%; */
 }
 
@@ -56,9 +70,11 @@ transform: translate(-50%, -50%);
 }
 
 .title {
+  margin-top: 8px;
   margin-bottom: 8px;
   background: transparent;
   border: none;
+  outline: none;
   padding-top: 10px;
   font-size: 16px;
   text-align: center;
