--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -12,7 +12,8 @@
     height: 45px;
     border-radius: 50%;
     z-index: 0.5;
-    margin: 4px
+    margin: 4px;
+    margin-left: 17px;
 }
 
 .nav-components {
@@ -20,9 +21,11 @@
     flex-direction: column;
     align-items: flex-end;
     margin-right: 20px;
+    color: white;
 }
 .nav-title{
     font-size: large;
+    color: white;
 }
 .nav-components button {
     padding: 5px;
@@ -42,6 +45,7 @@ button:hover{
 a {
     padding: 5px;
     text-decoration: none;
+    margin-left: 5px;
     
 }
 a:hover{
