--- a/frontend/src/stylesheets/reset.css
+++ b/frontend/src/stylesheets/reset.css
@@ -50,7 +50,8 @@ button{
     border: none;
     font-family: bukhari;
     background-color: rgba(48, 112, 5, 0.8);
-    color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
+	outline: none;
 }
 
 button:hover{
