--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -111,6 +111,9 @@
         }
         button{
             margin-top: 10px;
+            margin-right: 5px;
+            margin-left: 5px;
+            margin-bottom: 5px;
         }
     }
 }
