--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Peddana&family=Sansita+Swashed:wght@500&display=swap');
+$brown: rgb(97, 68, 15);
+$darkgreen: rgb(41,71,1);
+
 .trail-index-item {
     img{
         height: 100px;
@@ -24,6 +27,7 @@
         font-size: 32px;
         padding: 20px;
         font-family: 'Sansita Swashed', cursive;
+        color: $brown;
     }
     .trail-info{
         width: 50%;
@@ -42,26 +46,35 @@
             margin: auto;
             img{
                 max-height: 300px;
+                border-radius: 5px;
             }
         }
         .stats{
             margin: 20px auto;
             span{
-                display: flex;
-                justify-content: center;
+                justify-content: space-between;
                 align-items: baseline;
                 padding: 10px;
                 display: flex;
-                font-size: 18px;
+                font-size: 20px;
+                min-width: 300px;
+                font-family: arial;
+                h3 {
+                    font-size: 20px;
+                    font-family: arial;
+                }
                 p{
                     font-size: 20px;
+                    font-family: arial;
                 }
             }
         }
 
         .summary{
             font-size: 30px;
-            margin-bottom: 20px;
+            margin: 30px 0px 0px 0px;
+            font-family: 'Sansita Swashed', cursive;
+            color: $brown;
         }
 
         .buttons{
@@ -102,12 +115,14 @@
         .summary{
             color: white;
             padding: 5px;
+            font-family: arial;
         }
         .name{
             margin: 10px 0;
-            font-size: 18px;
-            font-weight: bold;
+            font-size: 22px;
+            font-weight: 500;
             color: white;
+            font-family: bukhari;
         }
         button{
             margin-top: 10px;
