--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -27,6 +27,10 @@
     font-size: large;
     color: white;
 }
+
+.nav-title:hover {
+    color: rgb(41,71,1);
+}
 .nav-components button {
     padding: 5px;
     border: none;
