--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -75,6 +75,9 @@ $darkgreen: rgb(41,71,1);
             margin: 30px 0px 0px 0px;
             font-family: 'Sansita Swashed', cursive;
             color: $brown;
+            a {
+                color: red;
+            }
         }
 
         .buttons{
