--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -118,6 +118,11 @@ transform: translate(-50%, -50%);
 .form-name-signup input:focus {
   outline: none;
 }
+
+.form-name .title, .form-name-signup .title{
+  color: white;
+}
+
 /* .form-name-signup input[type=password] {
     border: none;
         padding: 0px 0px 4px 2px;
