--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -50,6 +50,12 @@ $darkgreen: rgb(41,71,1);
                 border-radius: 5px;
             }
         }
+        a {
+            color: rgb(41,71,1);
+            padding-top: 24px;
+            font-size: 20px;
+            font-family: 'Sansita Swashed', cursive;
+        }
         .stats{
             margin: 20px auto;
             span{
