--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -21,7 +21,7 @@ $darkgreen: rgb(41,71,1);
         color: black;
         padding: 0 5px;
         font-family: 'Peddana', serif;
-        font-size: 16px;
+        // font-size: 16px;
     }
     h1{
         text-align: center;
