--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -49,11 +49,10 @@ margin: 0;
 .profile {
     max-width: 33%;
     border: 1px solid lightgray;
-    margin: 0;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 0;
 }
 
 /* .profile-wrapper is coming from dashboard.jsx and has a bunch of extra padding because of the way it is nested, tried to refactor but it looked awful */
