--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -2,7 +2,8 @@
     background-color: rgba(48, 112, 5, 0.8);
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
+    margin-top: 20px;
     bottom: 0;
     max-height: 100px;
 }
