--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -19,7 +19,7 @@ $darkgreen: rgb(41,71,1);
     display: flex;
     p{
         color: black;
-        padding: 0 5px;
+        padding: 0px;
         font-family: 'Peddana', serif;
         // font-size: 16px;
     }
