--- a/frontend/src/stylesheets/reviews.css
+++ b/frontend/src/stylesheets/reviews.css
@@ -95,7 +95,7 @@ input[type="file"] {
 .star-wrapper p {
     padding: 0px 0px 0px 0px;
     margin: 4px 9px 0px 0px;
-    font-size: 39px;
+    font-size: 32px;
 }
 
 .star-wrapper i {
@@ -109,9 +109,9 @@ input[type="file"] {
 }
 
 .radio-wrapper h3 {
-    font-size: 16px;
+    font-size: 24px;
     color: rgb(41,71,1);
-    padding: 0px 5px 0px 0px;
+    padding: 10px 11px 0px 0px;
     margin: -2px 3px 0px 0px;
 }
 
@@ -124,10 +124,12 @@ input[type="file"] {
 
 .radio-wrapper input[type=radio] + img {
   cursor: pointer;
+  border: 2px solid #F5F5F5;
 }
 
-.radio-wrapper[type=radio]:checked + img {
-  outline: 2px solid blue;
+.radio-wrapper input[type=radio]:checked + img {
+  border: 2px solid #5c7fc9;
+  border-radius: 3px;
 }
 
 .radio-wrapper label {
