--- a/frontend/src/stylesheets/reviews.css
+++ b/frontend/src/stylesheets/reviews.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: flex-start;
     max-width: 400px;
-    padding-bottom: 20px;
+    padding: 21px 0px 35px 0px;
 }    
 
 .review-idx-item-wrapper > h2 {
