--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -26,7 +26,7 @@ $darkgreen: rgb(41,71,1);
     h1{
         text-align: center;
         font-size: 32px;
-        padding: 20px;
+        padding: 21px 0px 35px 0px;
         font-family: 'Sansita Swashed', cursive;
         color: $brown;
     }
