Finish review editor

--- a/frontend/src/stylesheets/reviews.css
+++ b/frontend/src/stylesheets/reviews.css
@@ -1,21 +1,29 @@
-    
+.trail-reviews li:hover{
+    cursor: pointer;
+    background-color: lightgray;
+    transition: all 0.5s linear;
+}  
+
+.trail-reviews button{
+    margin-bottom: 10px;
+}
+
 .review-idx-item-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     max-width: 400px;
-    padding: 21px 0px 35px 0px;
+    padding: 20px;
 }    
 
 .review-idx-item-wrapper > h2 {
     font-size: 18px;
     color: rgb(97, 68, 15);
     font-family: bukhari;
-    padding: 0px 0px 0px 0px;
 }    
 
 .review-idx-item-wrapper p {
-    font-size: 30px;
+    font-size: 28px;
     color: rgb(97, 68, 15);
     font-family: bukhari;
     padding: 5px;
@@ -24,7 +32,6 @@
 
 .review-icon-wrapper {
     display: flex;
-    padding: 10px 0px 30px 3px;
 }
 .review-icon-wrapper i {
     padding: 0px 17px 0px 0px;
@@ -34,8 +41,6 @@
     color: black;
     font-family: 'Peddana', serif;
     font-size: 20px;
-    padding: 0px 0px 0px 0px;
-    margin: -9px 0px 0px 0px;
 }
 
 .img-uploader-wrapper {
@@ -101,8 +106,8 @@ input[type="file"] {
 }
 
 .star-wrapper p {
-    margin: -5px 9px 0px 0px;
-    font-size: 32px;
+    margin-right: 10px;
+    font-size: 28px;
 }
 
 .star-wrapper i {
