--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -8,11 +8,12 @@
   z-index: 10;
 }
 
-.modal-list .quill{
+.modal-list .quill, .modal-review .quill{
   height: 450px;
+  width: 95%;
   overflow: auto;
 }
-.modal-list {
+.modal-list, .modal-review {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -24,7 +25,17 @@
   font-family: Arial, Helvetica, sans-serif;
 } 
 
-.modal-background .modal-list>h1{
+.modal-review form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-review .star-wrapper{
+  padding: 10px;
+}
+
+.modal-list>h1, .modal-review>h1{
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(97, 68, 15);
   font-size: larger;
