--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,9 +1,10 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+    font-size: 1.5vw;
     width: 100%;
     /* position: absolute; */
-    margin-top: 20px;
+    /* margin-top: 20px; */
     bottom: 0;
     max-height: 100px;
 }
@@ -23,20 +24,26 @@
     padding: 3%;
 }
 
+.foot>div {
+    text-shadow: 1px 1px #525552, 
+    2px 2px #525552, 
+    3px 3px #525552;
+}
+
 .linkedin {
-    width: 35px;
-    height: 25px;
+    width: 30%;
+    height: auto;
     padding: 0;
     margin: 0;
     padding-left: 0;
 }
 
 .git {
-    width: 25px;
-    height: 25px;
+    width: 15%;
+    height: auto;
     border-radius: 50%;
     padding: 0;
-    margin: 0;
+    margin: 2%;
     padding-left: 0;
 }
 
