--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -8,10 +8,13 @@
     flex-direction: column;
     text-align: center;
     position: relative;
-    font-family: bukhari;
+    font-family: sans-serif;
+    font-size: 1.5vw;
+    font-weight: bold;
     text-decoration: none;
     margin: 0;
     height: -webkit-fill-available;
+    /* margin-bottom: -100px; */
 }
 
 .display {
@@ -37,11 +40,12 @@
 .logo-container {
     padding-left: 2%;
     padding-top: 5%;
+    width: 25%;
 }
 
 .logo {
-    height: 200px;
-    width: 200px;
+    height: auto;
+    width: 100%;
     border-radius: 50%;
 }
 .display>ul {
