--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -5,6 +5,7 @@
     position: relative;
     background-color: rgba(48, 112, 5, 0.8);
     font-family: bukhari;
+    font-size: 1.5vw;
 }
 
 .logo1 {
