--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
     font-family: sans-serif;
+    
     font-size: 1.5vw;
     width: 100%;
     /* position: absolute; */
@@ -14,6 +15,7 @@
     flex-direction:  row;
     justify-content: center;
     color: rgb(248, 246, 242);
+    margin-left: -100;
 }
 
 .footer-container>ul {
@@ -21,32 +23,35 @@
 }
 
 .foot {
+    display: flex;
+    flex-direction: column;
     padding: 3%;
 }
 
-.foot>div {
-    text-shadow: 1px 1px #525552, 
-    2px 2px #525552, 
-    3px 3px #525552;
+.dev-name {
+    font-weight: normal;
+    text-align: center;
+    filter: drop-shadow(.12rem .12rem 0 rgb(52, 65, 52)); 
 }
 
 .linkedin {
-    width: 30%;
+    width: 10%;
     height: auto;
     padding: 0;
-    margin: 0;
+    margin: 2%;
     padding-left: 0;
+    border-radius: 20%;
+    margin-right: 0.1%;
 }
 
 .git {
-    width: 15%;
+    width: 10%;
     height: auto;
     border-radius: 50%;
     padding: 0;
     margin: 2%;
-    padding-left: 0;
 }
 
-ul {
-   margin-left: -100; 
+.dev-links {
+    text-align: center;
 }
