--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -42,7 +42,12 @@ margin: 0;
 /* .index2>button{
     width: 50%;
 } */
-
+i {
+    color: rgb(97, 68, 15);
+}
+i:hover{
+    color: green;
+}
 /* .index2>header{
     color: rgb(97, 68, 15);
 } */
@@ -97,6 +102,7 @@ color: rgb(97, 68, 15);
 
 .list-index ul li i{
     padding-right: 10px;
+    /* color: red; */
 }
 
 .lists{
@@ -140,3 +146,4 @@ color: rgb(97, 68, 15);
     margin: 2%;
     color: rgba(48, 112, 5, 0.8);
 }
+
