--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -18,6 +18,7 @@
   top: 50%;
   left: 50%;
   width: 700px;
+  height: 80%;
   transform: translate(-50%, -50%);
   background-color: rgb(245, 245, 245);
   border-radius: 10px 40px;
@@ -36,12 +37,12 @@
 }
 
 .modal-list>h1, .modal-review>h1{
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(97, 68, 15);
-  font-size: larger;
-  font-weight: 600;
-  padding-top: 7px;
-  padding-bottom: 7px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(97, 68, 15);
+    font-size: 2.5vw;
+    font-weight: 600;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .modal-background>button {
@@ -170,7 +171,7 @@ width: 350px;
   border: none;
   outline: none;
   padding-top: 10px;
-  font-size: 16px;
+  font-size: 2.0vw;
   text-align: center;
 }
 
@@ -189,3 +190,7 @@ width: 350px;
     margin-right: 100px;
     outline: none;
 }
+
+/* .ql-editor {
+      height: 40vh;
+} */
