--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative; */
-    height: 100%;
+    min-height: 700px;
     width: 100%;
     margin: 8px;
 }
@@ -53,13 +53,13 @@ i:hover{
 } */
 
 .profile {
-    max-width: 33%;
+    max-width: 40%;
     border: 1px solid lightgray;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    line-height: 24px;
+    line-height: 34px;
     padding-bottom: 8px;
     margin-bottom: 7px;
     border-radius: 4px;
