--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -9,10 +9,16 @@
 }
 
 .modal-list .quill, .modal-review .quill{
-  height: 450px;
+  height: 100%;
   width: 95%;
   overflow: auto;
   padding: 0px 0px 0px 17px;
+  max-height: 370px;
+  min-height: 370px;
+}
+
+.modal-list .quill, .modal-review .quill p, ul, ol{
+  color: rgb(97, 68, 15);
 }
 
 
@@ -99,7 +105,7 @@ transform: translate(-50%, -50%);
 
 .form-name input[type=text] {
     border: none;
-    padding: 15px 0px 12px 17px;
+    padding: 15px 0px 10px 17px;
     border-radius: 5px 5px 0px 0px;
 }
 .form-name input[type=text]:focus {
@@ -107,7 +113,7 @@ transform: translate(-50%, -50%);
 }
 .form-name input[type=password] {
     border: none;
-    padding: 4px 0px 12px 17px;
+    padding: 11px 0px 12px 17px;
     border-radius: 0px 0px 5px 5px;
 }
 .form-name input[type=password]:focus {
