--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -6,6 +6,7 @@
     background-color: rgba(48, 112, 5, 0.8);
     font-family: bukhari;
     font-size: 1.5vw;
+    padding: 0px 10px 0px 10px;
 }
 
 .logo1 {
@@ -25,7 +26,7 @@
     color: white;
 }
 .nav-title{
-    font-size: large;
+    font-size: 24px;
     color: white;
 }
 
