--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -17,6 +17,7 @@ $darkgreen: rgb(41,71,1);
     width: 80%;
     margin: auto;
     display: flex;
+    justify-content: space-between;
     p{
         color: black;
         padding: 0px;
@@ -26,7 +27,7 @@ $darkgreen: rgb(41,71,1);
     h1{
         text-align: center;
         font-size: 32px;
-        padding: 21px 0px 35px 0px;
+        padding: 35px 0px 25px 0px;
         font-family: 'Sansita Swashed', cursive;
         color: $brown;
     }
@@ -42,7 +43,7 @@ $darkgreen: rgb(41,71,1);
             font-weight: bold;
         }
         .img-container{
-            max-height: 300px;
+            padding-bottom: 20px;
             img{
                 border-radius: 5px;
                 width: 100%;
