--- a/frontend/src/stylesheets/dashboard.css
+++ b/frontend/src/stylesheets/dashboard.css
@@ -10,6 +10,10 @@
     margin: 8px;
 }
 
+.dashboard-container button {
+    margin: 5px 0px 0px 0px;
+}
+
 .dashboard {
     display: flex;
     align-items: flex-start;
@@ -151,3 +155,12 @@ color: rgb(97, 68, 15);
     color: rgba(48, 112, 5, 0.8);
 }
 
+.follower-wrapper li{
+    line-height: 1.3;
+}
+
+.follower-wrapper h1 {    
+    padding: 5px 0px 10px 0px;
+    font-family: 'Sansita Swashed', cursive;
+    color: rgb(41,71,1);
+}
