--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,11 +1,10 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
     font-family: sans-serif;
-    
+    height: 110px;
     font-size: 1.5vw;
     width: 100%;
-    /* position: absolute; */
-    /* margin-top: 20px; */
+    position: fixed;
     bottom: 0;
 }
 
@@ -14,7 +13,7 @@
     flex-direction:  row;
     justify-content: center;
     color: rgb(248, 246, 242);
-    margin-left: -100;
+    height: 100%;
 }
 
 .footer-container>ul {
@@ -24,7 +23,7 @@
 .foot {
     display: flex;
     flex-direction: column;
-    padding: 3%;
+    padding: 1%;
 }
 
 .dev-name {
@@ -34,7 +33,7 @@
 }
 
 .linkedin {
-    width: 10%;
+    width: 7%;
     height: auto;
     padding: 0;
     margin: 2%;
@@ -44,7 +43,7 @@
 }
 
 .git {
-    width: 10%;
+    width: 7%;
     height: auto;
     border-radius: 50%;
     padding: 0;
