--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -57,31 +57,28 @@
 }
 
 .logo-container {
-    padding-left: 2%;
+    padding-left: 11%;
     width: 30%;
 }
 
 .li-container {
     max-width: 60%;
-    margin-left: 4%;
+    margin-left: 12%;
     line-height: 130%;
     color: rgb(97, 68, 15)
 }
 
-.display>ul {
+.li-container li {
+    font-size: 75%;
+}
+
+.display ul {
     color: green;
     list-style-type:none;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: flex-start;
-}
-
-.display>ul>li {
-    text-align: left;
-    padding-left: 20%;
-    color: rgb(97, 68, 15);
-    max-width: 75%;
 }
 
 .display header {
