--- a/frontend/src/stylesheets/dashboard.scss
+++ b/frontend/src/stylesheets/dashboard.scss
@@ -3,7 +3,7 @@
 $brown: rgb(97, 68, 15);
 
 .dashboard-container{
-    height: 84vh;
+    height: 87vh;
 }
 .dashboard{
     margin: auto;
@@ -17,18 +17,36 @@ $brown: rgb(97, 68, 15);
         font-family: 'Sansita Swashed', cursive;
         font-size: 28px;
         color: $brown;
-        margin-bottom: 5px;
+        margin: 10px 0;
     }
     .left{
         width: 30%;
         padding: 15px;
         border-right: 1px solid #eaeaea;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+
+        h1{
+            margin-top: 0;
+        }
     }
 
     .center{
         width: 40%;
         padding: 15px;
         border-right: 1px solid #eaeaea;
+        display: flex;
+        flex-direction: column;
+
+        h1{
+            margin-top: 0;
+        }
+
+        button{
+            width: 25%;
+            align-self: center;
+        }
     }
 
     .right{
@@ -46,6 +64,30 @@ $brown: rgb(97, 68, 15);
             img{
                 height: 150px;
                 width: 150px;
+                margin-bottom: 15px;
+            }
+
+            p{
+                margin: 5px 0;
+            }
+
+            p:first-of-type{
+                font-size: 20px;
+            }
+        }
+
+        .follower-wrapper{
+            ul{
+                height: 45vh;
+                overflow: auto;
+                li{
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 20px;
+                    i{
+                        padding-right: 10px;
+                    }
+                }
             }
         }
     }
