--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,11 +1,11 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
     font-family: sans-serif;
-    height: 110px;
+    height: 100px;
     font-size: 1.5vw;
     width: 100%;
-    position: fixed;
-    bottom: 0;
+    /* position: fixed;
+    bottom: 0; */
 }
 
 .footer-container {
@@ -29,6 +29,7 @@
 .dev-name {
     font-weight: normal;
     text-align: center;
+    font-size: 18px;
     filter: drop-shadow(.12rem .12rem 0 rgb(52, 65, 52)); 
 }
 
