--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -9,41 +9,47 @@
     src: url('https://fonts.googleapis.com/css2?family=Peddana&family=Sansita+Swashed:wght@500&display=swap')
 }
 
+#root{
+    height: 86vh;
+}
+#root>div{
+    height: 100%;
+}
 .main {
     display: flex;
     flex-direction: column;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     position: relative;
     font-family: 'Sansita Swashed', cursive;
     font-size: 2.5vw;
     font-weight: bold;
     text-decoration: none;
     margin: 0;
-    height: -webkit-fill-available;
-    /* margin-bottom: -100px; */
+    height: 100%;
+    background: url('../images/hiking.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .display {
     top: 10%;
     display: flex;
-    position: absolute;
     background-color: rgb(218, 248, 218, 0.7);
-    left: 20%;
     width: 62%;
     height: 50%;
     z-index: 0.5;
     border-radius: 5px 100px 5px;
 }
 
-.background {
+/* .background {
     z-index: 0;
     height: 100%;
     width: 100%;
     margin: 0;
     object-fit: none;
-}
-
-
+} */
 
 .logo {
     height: auto;
