--- a/frontend/src/stylesheets/saved_trails_index.scss
+++ b/frontend/src/stylesheets/saved_trails_index.scss
@@ -1,6 +1,9 @@
 .saved-trails-index{
     margin-bottom: 5px;
     width: 100%;
+    height: 95%;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     img{
         max-height: 80px;
@@ -29,22 +32,12 @@
         justify-content: space-between;
         align-items: center;
         padding: 10px;
-        transition: all 0.5s linear;
-        // margin: 8px;
+        transition: all 0.25s linear;
     }
     
     li:hover{
-        animation: pop-up 0.5s ease;
         transform: scale(1.05);
         background-color: lightgrey;
-    }
-}
-
-@keyframes pop-up{
-    0%{
-        transform: scale(1);
-    }
-    100%{
-        transform: scale(1.05);
+        padding: 10px 20px;
     }
 }
