--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: rgba(48, 112, 5, 0.8);
     font-family: sans-serif;
-    height: 100px;
+    height: fit-content;
     font-size: 1.5vw;
     width: 100%;
     /* position: fixed;
