--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -38,7 +38,8 @@
     display: flex;
     background-color: rgb(218, 248, 218, 0.7);
     width: 62%;
-    height: 50%;
+    height: fit-content;
+    padding: 20px;
     z-index: 0.5;
     border-radius: 5px 100px 5px;
 }
