--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -24,7 +24,6 @@
     position: relative;
     font-family: 'Sansita Swashed', cursive;
     font-size: 2.5vw;
-    font-weight: bold;
     text-decoration: none;
     margin: 0;
     height: 100%;
@@ -36,6 +35,7 @@
 .display {
     top: 10%;
     display: flex;
+    justify-content: center;
     background-color: rgb(218, 248, 218, 0.7);
     width: 62%;
     height: fit-content;
@@ -43,14 +43,6 @@
     z-index: 0.5;
     border-radius: 5px 100px 5px;
 }
-
-/* .background {
-    z-index: 0;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    object-fit: none;
-} */
 
 .logo {
     height: auto;
@@ -86,9 +78,11 @@
     justify-content: space-evenly;
     flex-direction: column;
     align-items: flex-start;
+    padding: 20px;
 }
 
 .display header {
+    font-weight: 600;
     max-width: 90%;
-    padding-left: 2%;
+    padding: 20px;
 }
