--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -66,9 +66,11 @@
 }
 
 .button {
-  padding: 11px;
+  padding: 10px;
+  padding-bottom: 15px;
+  font-size: 16px;
     border: none;
-    font-family: bukhari;
+    font-family: 'Sansita Swashed', cursive;
     background-color: rgba(48, 112, 5, 0.8);
     color: white;
     border-radius: 0 50% 50%;
@@ -83,11 +85,6 @@
   margin: 5px;
   outline: none; */
 
-}
-
-.button:hover{
-
-  text-decoration: underline;
 }
 
 /* .button input[type=submit]:hover {
@@ -125,10 +122,6 @@ transform: translate(-50%, -50%);
   outline: none;
 }
 
-.form-name input[type=submit]:hover {
-  background-color: rgb(41,71,1);
-}
-
 .form-name-signup {
 display: flex;
 flex-direction: column;
@@ -139,7 +132,11 @@ font-family: bukhari;
 color: rgba(48, 112, 5, 0.8);
 background: rgb(41,71,1);
 border-radius: 5px 80px 80px;
-background: linear-gradient(180deg, rgba(41,71,1,1) 20%, rgba(53,88,5,1) 50%, rgba(41,71,1,1) 80%);
+background: #5A3F37;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #2C7744, #5A3F37);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #2C7744, #5A3F37); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+border: 1px solid rgb(0, 63, 0);
+box-shadow: 0 0 10px rgb(0, 39, 0);
 /* padding: 8px; */
 top: 50%;
 left: 50%;
@@ -193,8 +190,13 @@ width: 350px;
 }
 
 .errors{
-  color: red;
+  color: rgb(252, 252, 252);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 5px;
+}
+
+.errors:last-of-type{
+  padding-bottom: 20px;
 }
 
 #rating {
