--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -9,6 +9,15 @@
     padding: 0px 10px 0px 10px;
 }
 
+.nav-logo{
+    display: flex;
+    align-items: center;
+}
+
+.nav-logo>h1{
+    color: white;
+}
+
 .logo1 {
     width: 45px;
     height: 45px;
@@ -20,10 +29,15 @@
 
 .nav-components {
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
-    margin-right: 20px;
+    font-family: 'Sansita Swashed', cursive;
+    align-items: center;
     color: white;
+}
+
+.nav-components>h1{
+    font-size: 25px;
+    margin-right: 20px;
 }
 .nav-title{
     font-size: 24px;
@@ -34,9 +48,11 @@
     color: rgb(41,71,1);
 }
 .nav-components button {
-    padding: 5px;
+    margin-right: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
     border: none;
-    font-family: bukhari;
+    font-family: 'Sansita Swashed', cursive;
     background-color: transparent;
     color: rgb(255, 255, 255);
 }
