--- a/frontend/src/stylesheets/trails.scss
+++ b/frontend/src/stylesheets/trails.scss
@@ -127,9 +127,9 @@ $darkgreen: rgb(41,71,1);
         padding: 10px;
         width: 330px;
         min-height: 240px;
-        // background: rgb(64, 109, 4);
-        background: rgb(41,71,1);
-        background: linear-gradient(180deg, rgba(41,71,1,1) 20%, rgba(53,88,5,1) 50%, rgba(41,71,1,1) 80%);
+        background: #5A3F37;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to bottom, #2C7744, #5A3F37);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to bottom, #2C7744, #5A3F37); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         border-radius: 5px 80px 80px;
         border: 1px solid rgb(0, 63, 0);
         box-shadow: 0 0 10px rgb(0, 39, 0);
