Increase button font size

--- a/frontend/src/stylesheets/reset.css
+++ b/frontend/src/stylesheets/reset.css
@@ -46,6 +46,7 @@ table {
 
 button{
 	padding: 10px;
+	font-size: 18px;
 	border-radius: 5px 20px;
     border: none;
     font-family: 'Sansita Swashed', cursive;
